# predict_customer_churn_mldevops

./: .gitignore  MIT-LICENSE.txt  README.md  churn_library.py  churn_script_logging_and_tests.py  pyproject.toml  setup.cfg
models/: logistic_model.pkl
